clients/include/rocblas_fortran.hpp

rocblas_status rocblas_zdotu_strided_batched_fortran(rocblas_handle                handle,
                                                     rocblas_int                   n,
                                                     const rocblas_double_complex* x,
                                                     rocblas_int                   incx,
                                                     rocblas_stride                stridex,
                                                     const rocblas_double_complex* y,
                                                     rocblas_int                   incy,
                                                     rocblas_stride                stridey,
                                                     rocblas_int                   batch_count,
                                                     rocblas_double_complex*       result);
rocblas_status rocblas_cdotc_strided_batched_fortran(rocblas_handle               handle,
                                                     rocblas_int                  n,
                                                     const rocblas_float_complex* x,
                                                     rocblas_int                  incx,
                                                     rocblas_stride               stridex,
                                                     const rocblas_float_complex* y,
                                                     rocblas_int                  incy,
                                                     rocblas_stride               stridey,
                                                     rocblas_int                  batch_count,
                                                     rocblas_float_complex*       result);
rocblas_status rocblas_zdotc_strided_batched_fortran(rocblas_handle                handle,
                                                     rocblas_int                   n,
                                                     const rocblas_double_complex* x,
                                                     rocblas_int                   incx,
                                                     rocblas_stride                stridex,
                                                     const rocblas_double_complex* y,
                                                     rocblas_int                   incy,
                                                     rocblas_stride                stridey,
                                                     rocblas_int                   batch_count,
                                                     rocblas_double_complex*       result);
// swap
rocblas_status rocblas_sswap_fortran(
    rocblas_handle handle, rocblas_int n, float* x, rocblas_int incx, float* y, rocblas_int incy);
rocblas_status rocblas_dswap_fortran(
    rocblas_handle handle, rocblas_int n, double* x, rocblas_int incx, double* y, rocblas_int incy);
rocblas_status rocblas_cswap_fortran(rocblas_handle         handle,
                                     rocblas_int            n,
                                     rocblas_float_complex* x,
                                     rocblas_int            incx,
                                     rocblas_float_complex* y,
                                     rocblas_int            incy);
rocblas_status rocblas_zswap_fortran(rocblas_handle          handle,
                                     rocblas_int             n,
                                     rocblas_double_complex* x,
                                     rocblas_int             incx,
                                     rocblas_double_complex* y,
                                     rocblas_int             incy);
// swap_batched
rocblas_status rocblas_sswap_batched_fortran(rocblas_handle handle,
                                             rocblas_int    n,
                                             float*         x[],
                                             rocblas_int    incx,
                                             float*         y[],
                                             rocblas_int    incy,
                                             rocblas_int    batch_count);
rocblas_status rocblas_dswap_batched_fortran(rocblas_handle handle,
                                             rocblas_int    n,
                                             double*        x[],
                                             rocblas_int    incx,
                                             double*        y[],
                                             rocblas_int    incy,
                                             rocblas_int    batch_count);
rocblas_status rocblas_cswap_batched_fortran(rocblas_handle         handle,
                                             rocblas_int            n,
                                             rocblas_float_complex* x[],
                                             rocblas_int            incx,
                                             rocblas_float_complex* y[],
                                             rocblas_int            incy,
                                             rocblas_int            batch_count);
rocblas_status rocblas_zswap_batched_fortran(rocblas_handle          handle,
                                             rocblas_int             n,
                                             rocblas_double_complex* x[],
                                             rocblas_int             incx,
                                             rocblas_double_complex* y[],
                                             rocblas_int             incy,
                                             rocblas_int             batch_count);
// swap_strided_batched
rocblas_status rocblas_sswap_strided_batched_fortran(rocblas_handle handle,
                                                     rocblas_int    n,
                                                     float*         x,
                                                     rocblas_int    incx,
                                                     rocblas_stride stridex,
                                                     float*         y,
                                                     rocblas_int    incy,
                                                     rocblas_stride stridey,
                                                     rocblas_int    batch_count);
rocblas_status rocblas_dswap_strided_batched_fortran(rocblas_handle handle,
                                                     rocblas_int    n,
                                                     double*        x,
                                                     rocblas_int    incx,
                                                     rocblas_stride stridex,
                                                     double*        y,
                                                     rocblas_int    incy,
                                                     rocblas_stride stridey,
                                                     rocblas_int    batch_count);
rocblas_status rocblas_cswap_strided_batched_fortran(rocblas_handle         handle,
                                                     rocblas_int            n,
                                                     rocblas_float_complex* x,
                                                     rocblas_int            incx,
                                                     rocblas_stride         stridex,
                                                     rocblas_float_complex* y,
                                                     rocblas_int            incy,
                                                     rocblas_stride         stridey,
                                                     rocblas_int            batch_count);
rocblas_status rocblas_zswap_strided_batched_fortran(rocblas_handle          handle,
                                                     rocblas_int             n,
                                                     rocblas_double_complex* x,
                                                     rocblas_int             incx,
                                                     rocblas_stride          stridex,
                                                     rocblas_double_complex* y,
                                                     rocblas_int             incy,
                                                     rocblas_stride          stridey,
                                                     rocblas_int             batch_count);
// axpy
rocblas_status rocblas_haxpy_fortran(rocblas_handle      handle,
                                     const int           N,
                                     const rocblas_half* alpha,
                                     const rocblas_half* x,
                                     const int           incx,
                                     rocblas_half*       y,
                                     const int           incy);
rocblas_status rocblas_saxpy_fortran(rocblas_handle handle,
                                     const int      N,
                                     const float*   alpha,
                                     const float*   x,
                                     const int      incx,
                                     float*         y,
                                     const int      incy);